Add options for changing wrong formatted plain text messages to something readable; also update default settings file

--- a/relay_settings.ini
+++ b/relay_settings.ini
@@ -1,19 +1,21 @@
 [info]
 # not used now, so informational only
-language=		Polish
+language=			Polish
 
 [strings]
-no_data=		"(brak danych)"
-sender=			"Nadawca: "
-subject=		"Temat:   "
-date=			"Data:    "
+no_data=			"(brak danych)"
+sender=				"Nadawca: "
+subject=			"Temat:   "
+date=				"Data:    "
 
 [phone]
-number=			1001
+number=				1001
 
 [message]
-subject_trigger=	"[FAX] "
-message_trigger=	"!DISCARD!"
-use_plain=		True
-delete_subject_trigger=	True
-delete_message_trigger=	True
+subject_trigger=		"[FAX] "
+message_trigger=		"!DISCARD!"
+use_plain=			False
+delete_subject_trigger=		True
+delete_message_trigger=		True
+multispaces_to_new_lines=	False
+convert_amp_characters=		False
