Add ability to use more than one fax

--- a/relay_settings.ini
+++ b/relay_settings.ini
@@ -2,20 +2,28 @@
 # not used now, so informational only
 language=			Polish
 
+[default]
+default_settings=		"FAX"
+use_default_on_wrong_parameter=	True
+
 [strings]
 no_data=			"(brak danych)"
 sender=				"Nadawca: "
 subject=			"Temat:   "
 date=				"Data:    "
 
-[phone]
-number=				1001
-
 [message]
-subject_trigger=		"[FAX] "
 message_trigger=		"!DISCARD!"
 use_plain=			False
 delete_subject_trigger=		True
 delete_message_trigger=		True
 multispaces_to_new_lines=	False
 convert_amp_characters=		False
+
+[FAX]
+phone_number=			1001
+subject_trigger=		"[FAX] "
+
+[FAX2]
+phone_number=			1003
+subject_trigger=		"[FAX2] "
