Update default settings file to reflect changes

--- a/relay_settings.ini
+++ b/relay_settings.ini
@@ -14,6 +14,9 @@ date=				"Data:    "
 
 [message]
 message_trigger=		"!DISCARD!"
+standard_trigger=		"!STANDARD!"
+delete_standard_trigger=	True
+use_standard_trigger=		True
 use_plain=			False
 delete_subject_trigger=		True
 delete_message_trigger=		True
@@ -27,3 +30,7 @@ subject_trigger=		"[FAX] "
 [FAX2]
 phone_number=			1003
 subject_trigger=		"[FAX2] "
+
+[FAX3]
+phone_number=			1005
+subject_trigger=		"[FAX3] "
