Update default settings file

--- a/relay_settings.ini
+++ b/relay_settings.ini
@@ -22,6 +22,8 @@ delete_subject_trigger=		True
 delete_message_trigger=		True
 multispaces_to_new_lines=	False
 convert_amp_characters=		False
+strip_new_lines_on_startend=	True
+strip_intext_new_lines=		True
 
 [FAX]
 phone_number=			1001
