Deleted my internal fax numbers as they are not needed here :)

--- a/relay_settings.ini
+++ b/relay_settings.ini
@@ -26,13 +26,13 @@ strip_new_lines_on_startend=	True
 strip_intext_new_lines=		True
 
 [FAX]
-phone_number=			1001
+phone_number=			
 subject_trigger=		"[FAX] "
 
 [FAX2]
-phone_number=			1003
+phone_number=			
 subject_trigger=		"[FAX2] "
 
 [FAX3]
-phone_number=			1005
+phone_number=			
 subject_trigger=		"[FAX3] "
