Add additional position for system logger's address

--- a/relay_settings.ini
+++ b/relay_settings.ini
@@ -6,6 +6,9 @@ language=			Polish
 default_settings=		"FAX"
 use_default_on_wrong_parameter=	True
 
+[logger]
+address=			"/dev/log"
+
 [strings]
 no_data=			"(brak danych)"
 sender=				"Nadawca: "
