Update settings file to show new features

--- a/relay_settings.ini
+++ b/relay_settings.ini
@@ -5,6 +5,10 @@ language=			Polish
 [default]
 default_settings=		"FAX"
 use_default_on_wrong_parameter=	True
+date_timezone=			""
+date_format=			"%Y-%m-%d %H:%M:%S"
+log_message_to_file=		True
+message_log_file=		"/var/log/Mail2Fax/mails.gz"
 
 [logger]
 address=			"/dev/log"
@@ -28,14 +32,36 @@ convert_amp_characters=		False
 strip_new_lines_on_startend=	True
 strip_intext_new_lines=		True
 
+[rendering]
+text_font_name=			"Monospace"
+text_font_size=			10
+text_top_margin=		6
+
+# Fax number settings below
+
 [FAX]
 phone_number=			
 subject_trigger=		"[FAX] "
+# route_to=			"FAX3"
+# date_timezone=		"Asia/Tokyo"
+# date_format=			"%Y-%m-%d %H:%M:%S"
+# log_message_to_file=		True
+# message_log_file=		"/var/log/Mail2Fax/FAX.gz"
 
 [FAX2]
 phone_number=			
 subject_trigger=		"[FAX2] "
+# route_to=			"FAX"
+# date_timezone=		"Australia/Sydney"
+# date_format=			"%Y-%m-%d %H:%M:%S"
+# log_message_to_file=		True
+# message_log_file=		"/var/log/Mail2Fax/FAX2.gz"
 
 [FAX3]
 phone_number=			
 subject_trigger=		"[FAX3] "
+# route_to=			"FAX2"
+# date_timezone=		"Europe/London"
+# date_format=			"%Y-%m-%d %H:%M:%S"
+# log_message_to_file=		True
+# message_log_file=		"/var/log/Mail2Fax/FAX3.gz"
