Add settings to turn on/off multipage TIFF support

--- a/relay_settings.ini
+++ b/relay_settings.ini
@@ -9,6 +9,7 @@ date_timezone=			""
 date_format=			"%Y-%m-%d %H:%M:%S"
 log_message_to_file=		True
 message_log_file=		"/var/log/Mail2Fax/mails.gz"
+unpack_multipage_tiffs=		True
 
 [logger]
 address=			"/dev/log"
